History
=======

Version 0.8.2 - Unreleased
--------------------------

- Fixed a bug in ``HTMLComposer`` where unsubscribe_url could not be substituted
  by template engine because of double dollars in variable name.  [saily]

Version 0.8.1 - 2008-11-14
--------------------------

- Small refactoring of tests to allow for reuse of test infrastructure
  in third party tests. [nouri]

Version 0.8.0 - 2008-11-12
--------------------------

- Added bouncing support: The new utility view
  ``@@dancing.utils/handle_bounce`` takes a list of addresses and
  marks subscriptions as pending when it receives more than two bounce
  notifications.  This has the effect that no more messages are sent
  to that subscription, while the subscription is still present in the
  database. [nouri]

- Added caching to composer rendering.  Caching is done based on
  ``_vars`` and collected items.  Notice that ``composer._vars`` has
  been split into two; ``_vars`` and ``_subscription_vars``. The
  latter containing variables that are likely to be unique to the
  subscription, and the former those that are likely shared across
  multiple subscriptions.

  Rendering is now broken into two step:

  1) Rendering the ``composer-html`` template and compacting the
     resulting html with StoneAgeHTML.  ``_vars`` and collected items
     is available in the template.  This step is cached on ``_vars``
     and items.

  2) ``string.Template`` variable replacement on the html of variables
     in ``_subscription_vars``.  In the default implementation only
     the subscribers secret in the subscription management urls is
     replaced.

  [tmog]

Version 0.7.7 - 2008-11-05
--------------------------

- Set ``ignoreContext = True`` for SubscriptionsSearchForm.  Before
  I'd get ``AttributeError: 'ManageSubscriptionsForm' object has no
  attribute 'fulltext'``, but strangely enough not in the tests and
  only in one installation that I know of.  [nouri]

Version 0.7.6 - 2008-11-05