@@ -4,6 +4,10 @@ History
 Version 0.8.2 - Unreleased
 --------------------------
 
+- ATTENTION: this feature is incomplete in this branch. Metadata should be 
+  included in export/import. This could be a security hole, if pending is not 
+  exported.  [saily]
+
 - Fixed a bug in ``HTMLComposer`` where unsubscribe_url could not be substituted
   by template engine because of double dollars in variable name.  [saily]
 
